# digger

./: Cargo.toml
.github/workflows/: ci.yaml
src/: README.md  main.rs
src/aws/: s3.rs
src/azure/: storage.rs
src/gcp/: gcs.rs
