[package]
name = "digger"
version = "0.1.0"
authors = ["freddd"]
edition = "2018"

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde-xml-rs = "0.4.0"
tokio = { version = "0.2.22", features = ["macros", "fs"] }
regex = "1"
tame-oauth = "0.4.6"
reqwest = {version = "0.10.9", features = ["json"]}
http = "0.2.1"
log = "0.4"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
env_logger = "0.8.2"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "digger"
path = "src/main.rs"
