[package]
name = "digger"
version = "0.1.0"
authors = ["freddd"]
edition = "2018"

[dependencies]
clap = "4.5.23"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.8"
serde-xml-rs = "0.6.0"
tokio = { version = "1.42.0", features = ["macros", "fs"] }
regex = "1.11.1"
tame-oauth = "0.10.0"
reqwest = {version = "0.12.12", features = ["json"]}
http = "1.2.0"
log = "0.4.22"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
env_logger = "0.11.6"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "digger"
path = "src/main.rs"
